<resources>
    <string name="app_name">Gitly</string>
    <string name="app_desc">A mentorship application for newbies</string>
    <string name="app_desc_long">A mentorship application that helps you develop a relationship &amp; meet people who are already in your field of interest</string>
    <string name="login_header">Easy way to connect to your mentors &amp; get some pro tips on programming &amp; design</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="get_user">Get profile</string>
    <string name="explore">Explore</string>
    <string name="store_link">[Update now](https://play.google.com/store/apps/details?id=dev.gitly)</string>
    <string name="login_instead">Sign in instead</string>
    <string name="login_title">Get connected to the best</string>
    <string name="username">Full Name</string>
    <string name="sign_in">Sign In</string>
    <string name="get_started">Explore</string>
    <string name="retry">Retry</string>
    <string name="join_slack">Join slack</string>
    <string name="compose_message">Compose</string>
    <string name="popular">Popular</string>
    <string name="mentors">Mentors</string>
    <string name="search">Search</string>
    <string name="toggle_theme">Toggle theme</string>
    <string name="more">More options</string>
    <string name="search_hint">Search anything</string>
    <string name="cd_close_search">Close search</string>
    <string name="cd_clear_search">Clear</string>
    <string name="empty"> </string>
    <string name="proceed">Proceed</string>
    <string name="sign_up">Sign up</string>
    <string name="provide_your">Provide your</string>
    <string name="details">details</string>
    <string name="tell_us">Tell us your</string>
    <string name="expertise">expertise</string>
    <string name="login_as_guest">Skip for now</string>
    <string name="expertise_info">It will help us to provide the best for you</string>
    <string name="personal_info_desc">Tell us something about yourself</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="country_hint">Country</string>
    <string name="designation_hint">Your designation</string>
    <string name="default_country">Ghana</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Mid-Level</string>
    <string name="experience_none">I\'d rather not say</string>
    <string name="expert">Expert</string>
    <string name="logout">Logout</string>
    <string name="recent">Recent</string>
    <string name="blog">Blog posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>