<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authState"
            type="dev.gitly.viewmodel.AuthState" />

        <variable
            name="viewModel"
            type="dev.gitly.viewmodel.AuthViewModel" />

        <variable
            name="email"
            type="String" />

        <variable
            name="password"
            type="String" />

        <variable
            name="currentUser"
            type="dev.gitly.model.data.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_xxlarge"
        tools:context=".view.AuthFragment">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:gravity="center"
            android:paddingVertical="@dimen/spacing_large"
            android:text="@string/app_name"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center"
            android:text="@string/login_header"
            android:textAppearance="?textAppearanceSubtitle2"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@id/login_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:text="gitly@domain.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:layout_constraintTop_toBottomOf="@id/email_container"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:text="@tools:sample/full_names" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:onClick="@{(view) -> viewModel.getAccessToken(email, password)}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>