<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.welcome.WelcomeFragment">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_xxlarge"
            android:paddingVertical="@dimen/spacing_xxxlarge">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_logo_height"
                android:layout_marginTop="@dimen/spacing_xxxlarge"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/spacing_large"
                android:text="@string/app_name"
                android:textAppearance="?textAppearanceHeadline4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/spacing_small"
                android:text="@string/login_header"
                android:textAppearance="?textAppearanceBody2" />

            <Button
                android:id="@+id/get_started"
                android:layout_width="@dimen/logo_height"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:text="@string/get_started" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/privacy_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/spacing_large"
            android:textAppearance="?textAppearanceOverline"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Current version 1.0.0 Update Now" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>