<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="dev.gitly.model.data.User" />

        <import type="dev.gitly.viewmodel.UserViewModel" />

        <variable
            name="model"
            type="UserViewModel" />

        <variable
            name="userId"
            type="String" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fitsSystemWindows="false"
        tools:openDrawer="start">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.home.HomeFragment">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liftOnScroll="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/collapsing_toolbar_height_expanded"
                    app:contentScrim="?colorPrimary"
                    app:layout_scrollFlags="snap|exitUntilCollapsed">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/toolbar_container"
                        android:layout_width="200dp"
                        android:layout_height="?actionBarSize"
                        android:layout_gravity="top|end"
                        app:layout_collapseMode="pin">

                        <ImageButton
                            android:id="@+id/search_menu_item"
                            android:layout_width="0dp"
                            android:layout_height="?actionBarSize"
                            android:background="?selectableItemBackground"
                            android:contentDescription="@string/search"
                            android:src="@drawable/ic_twotone_search"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/theme_menu_item"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/theme_menu_item"
                            android:layout_width="0dp"
                            android:layout_height="?actionBarSize"
                            android:background="?selectableItemBackground"
                            android:contentDescription="@string/toggle_theme"
                            android:src="@drawable/ic_twotone_follow_system"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/more_menu_item"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/search_menu_item"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/more_menu_item"
                            android:layout_width="0dp"
                            android:layout_height="?actionBarSize"
                            android:background="?selectableItemBackground"
                            android:contentDescription="@string/more"
                            android:src="@drawable/ic_twotone_more"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/theme_menu_item"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom|start"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/spacing_large"
                        app:layout_collapseMode="parallax">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="?emphasisLow"
                            android:text="@string/popular"
                            android:textAppearance="?textAppearanceHeadline3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="?emphasisHigh"
                            android:text="@string/mentors"
                            android:textAppearance="?textAppearanceHeadline3" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- todo: add content here -->

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottom_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                app:fabAlignmentMode="end"
                app:menu="@menu/bottom_app_bar_menu" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/join_slack"
                android:enabled="@{userId != null, default=`false`}"
                android:src="@drawable/ic_twotone_group"
                app:layout_anchor="@id/bottom_app_bar" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/header_home">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="@dimen/spacing_large"
                android:enabled="@{userId != null, default=`false`}"
                android:text="@string/logout" />

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>